<resources>
    <string name="app_name">Geolocalizaciónapp</string>
    <string name="descripcion">Descripcion</string>
    <string name="user">User</string>
    <string name="time">time</string>
    <string name="agregar_dirreccion">agregar dirreccion</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="longitud">longitud</string>
    <string name="latitud">Latitud</string>
    <string name="direccion">Direccion</string>
    <string name="fecha_de_atencion">Fecha de atencion</string>
    <string name="edit_store_message_save_success">se ha guardado correctamente su direccion</string>
    <string name="edit_store_message_update_success">Se ha actualizado correctamente su direccion</string>

</resources>