<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="10dp">

    <TextView
        android:id="@+id/rDescp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="match_parent"
        android:text="@string/descripcion"
        android:textSize="18sp"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/rUser"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:text="@string/user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/rDate"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:text="@string/time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>