<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="addmodel.EditRutasActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/common_padding_default">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtDireccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/direccion"
            app:endIconMode="clear_text"
            app:counterMaxLength="100"
            app:counterEnabled="true"
            app:startIconDrawable="@drawable/ic_baseline_edit_location_24"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDireccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="116"
                android:inputType="textCapWords"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fecha_de_atencion"
            app:endIconMode="clear_text"
            app:counterEnabled="false"
            app:startIconDrawable="@drawable/ic_baseline_edit_location_24"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etFecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="116"
                android:inputType="textCapWords"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtLat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/latitud"
            app:endIconMode="clear_text"
            app:counterEnabled="false"
            app:startIconDrawable="@drawable/ic_baseline_edit_location_24"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="116"
                android:inputType="textCapWords"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtLong"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/longitud"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_baseline_edit_location_24"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:maxLength="123" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>